Prevent `<code>` element from overflowing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,6 +185,7 @@ blockquote {
 kbd,
 code {
   padding: 0.01em 0.2em;
+  overflow-wrap: break-word;
 }
 
 kbd {
